[gd_scene load_steps=2 format=3 uid="uid://dachievement_notification"]

[ext_resource type="Script" path="res://scripts/ui/achievement_notification.gd" id="1_script"]

[node name="AchievementNotification" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_left = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_bottom = 100.0
grow_horizontal = 2
mouse_filter = 2
script = ExtResource("1_script")

[node name="NotificationPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 20.0
offset_right = 180.0
offset_bottom = 90.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NotificationPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="IconLabel" type="Label" parent="NotificationPanel/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 36
text = "üèÜ"

[node name="VBoxContainer" type="VBoxContainer" parent="NotificationPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="TitleLabel" type="Label" parent="NotificationPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 12
text = "ÊàêÂ∞±Ëß£ÈîÅ"

[node name="NameLabel" type="Label" parent="NotificationPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "ÊàêÂ∞±ÂêçÁß∞"

[node name="DescriptionLabel" type="Label" parent="NotificationPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11
text = "ÊàêÂ∞±ÊèèËø∞"
