# æˆå°±é€šçŸ¥UI
# åœ¨å±å¹•ä¸Šæ˜¾ç¤ºæˆå°±è§£é”é€šçŸ¥
extends Control

# é€šçŸ¥é˜Ÿåˆ—
var notification_queue: Array[Dictionary] = []
var is_showing: bool = false

# UIç»„ä»¶
@onready var notification_panel: PanelContainer = $NotificationPanel
@onready var icon_label: Label = $NotificationPanel/HBoxContainer/IconLabel
@onready var title_label: Label = $NotificationPanel/HBoxContainer/VBoxContainer/TitleLabel
@onready var name_label: Label = $NotificationPanel/HBoxContainer/VBoxContainer/NameLabel
@onready var description_label: Label = $NotificationPanel/HBoxContainer/VBoxContainer/DescriptionLabel

func _ready() -> void:
	notification_panel.visible = false
	
	# è¿žæŽ¥æˆå°±ç®¡ç†å™¨ä¿¡å·
	var achievement_mgr = get_node_or_null("/root/AchievementManager")
	if achievement_mgr:
		achievement_mgr.achievement_unlocked.connect(_on_achievement_unlocked)

## æˆå°±è§£é”å›žè°ƒ
func _on_achievement_unlocked(_achievement_id: String, achievement_data: Dictionary) -> void:
	notification_queue.append(achievement_data)
	
	if not is_showing:
		_show_next_notification()

## æ˜¾ç¤ºä¸‹ä¸€ä¸ªé€šçŸ¥
func _show_next_notification() -> void:
	if notification_queue.is_empty():
		is_showing = false
		return
	
	is_showing = true
	var achievement = notification_queue.pop_front()
	
	# æ›´æ–°æ˜¾ç¤ºå†…å®¹
	if icon_label:
		icon_label.text = "ðŸ†"
	if title_label:
		title_label.text = "æˆå°±è§£é”"
	if name_label:
		name_label.text = achievement.get("name", "")
	if description_label:
		description_label.text = achievement.get("description", "")
	
	# æ’­æ”¾è¿›å…¥åŠ¨ç”»
	notification_panel.visible = true
	notification_panel.position.y = -100
	notification_panel.modulate.a = 0
	
	var tween = create_tween()
	tween.tween_property(notification_panel, "position:y", 20, 0.3).set_ease(Tween.EASE_OUT).set_trans(Tween.TRANS_BACK)
	tween.parallel().tween_property(notification_panel, "modulate:a", 1.0, 0.3)
	
	# æ’­æ”¾éŸ³æ•ˆ
	if AudioManager:
		AudioManager.play_sfx("power_up")
	
	# ç­‰å¾…æ˜¾ç¤ºæ—¶é—´
	await get_tree().create_timer(3.0).timeout
	
	# æ’­æ”¾é€€å‡ºåŠ¨ç”»
	var exit_tween = create_tween()
	exit_tween.tween_property(notification_panel, "position:y", -100, 0.3).set_ease(Tween.EASE_IN)
	exit_tween.parallel().tween_property(notification_panel, "modulate:a", 0.0, 0.3)
	
	await exit_tween.finished
	notification_panel.visible = false
	
	# æ˜¾ç¤ºä¸‹ä¸€ä¸ª
	_show_next_notification()

## æ‰‹åŠ¨æ˜¾ç¤ºé€šçŸ¥
func show_notification(title: String, message: String, icon: String = "ðŸ†") -> void:
	notification_queue.append({
		"name": title,
		"description": message,
		"icon": icon
	})
	
	if not is_showing:
		_show_next_notification()
